<resources>
    <string name="app_name">Open The Door</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="the_door_is">The door is</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login_label">Login</string>
    <string name="information_credentials">Please provide the credentials given to you by the administrator!</string>
    <string name="locked">LOCKED</string>
    <string name="unlock">Unlock</string>
    <string name="add_new_user">Add new user</string>
    <string name="username">Username</string>
    <string name="stream_is_stopped">Stream is stopped</string>
    <string name="filter">Filter</string>
    <string name="action_type">Action type:</string>
    <string name="filter_logs_str">Filter logs</string>
</resources>
