<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/framesImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_videocam_black_150dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnStartStream"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Stream" />

            <Button
                android:id="@+id/btnRecord"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Record" />

            <Button
                android:id="@+id/btnSnapshot"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Snapshot" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutStream"
        android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/etTheDoorIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/the_door_is"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/etDoorStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etTheDoorIs"
        android:layout_below="@+id/etTheDoorIs"
        android:text="@string/locked"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDoorStatus"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/unlock"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>